@@ -1,3 +1,2 @@
 /.idea/
 /variables/*.yml
-/variables/*.conf
