@@ -1,0 +1,29 @@
+input {
+  redis {
+    host => "redis"
+    port => 6379
+    db => 1
+    data_type => "list"
+    key => "logstash"
+    codec => "json_lines"
+  }
+}
+
+filter {
+  date {
+    match => [ "post_created_time", "UNIX" ]
+    target => "@timestamp"
+  }
+}
+
+output {
+  elasticsearch {
+    cluster => "pirozhki"
+    document_id => "%{post_instagram_id}"
+    embedded => false
+    flush_size => 1000
+    host => "elasticsearch"
+    node_name => "pirozhki-logstash"
+    protocol => "node"
+  }
+}
